tests/invalid/actual_more_expected.err_exp
actual_more_expected.m:029: In clause for predicate `p1'/3:
actual_more_expected.m:029:   in argument 1 of call to predicate `foldl'/4:
actual_more_expected.m:029:   type error: type of argument does not match its
actual_more_expected.m:029:   expected type;
actual_more_expected.m:029:   its inferred type is
actual_more_expected.m:029:     pred(int, actual_more_expected.dir, int),
actual_more_expected.m:029:   the type expected by predicate `list.foldl'/4 is:
actual_more_expected.m:029:     pred(L, A, A),
actual_more_expected.m:029:   the type expected by predicate `string.foldl'/4
actual_more_expected.m:029:   is:
actual_more_expected.m:029:     pred(character, A, A).
actual_more_expected.m:029:   The possible partial type assignments were:
actual_more_expected.m:029:     Type assignment 1, derived from predicate
actual_more_expected.m:029:     `string.foldl'/4:
actual_more_expected.m:029:     D_4: list.list(actual_more_expected.dir)
actual_more_expected.m:029:     S_5: int
actual_more_expected.m:029:     F_6: int
actual_more_expected.m:029:     V_7: pred(int, actual_more_expected.dir, int)
actual_more_expected.m:029: 
actual_more_expected.m:029:     Type assignment 2, derived from predicate
actual_more_expected.m:029:     `list.foldl'/4:
actual_more_expected.m:029:     D_4: list.list(actual_more_expected.dir)
actual_more_expected.m:029:     S_5: int
actual_more_expected.m:029:     F_6: int
actual_more_expected.m:029:     V_7: pred(int, actual_more_expected.dir, int)
